--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,8 +7,11 @@
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+  <ion-datetime
+    displayFormat="MM/DD/YYYY"
+    pickerFormat="MM DD YYYY"
+    placeholder="MM/DD/YYYY"
+    min="2019-05-13"
+    max="2019-07-13">
+  </ion-datetime>
 </ion-content>
